# Ellie-Language

./: .gitignore  .gitmodules  .insightsIgnore  .travis.yml  Building.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  DEBUG_HEADERS.eidbg  DeveloperHandbook.md  Ellie-Language.code-workspace  Equality.js  LICENSE  LanguageTour.md  README.md  README.tr.md  Roadmap.md  Robotics.md  SECURITY.md  TODO.md  Untitled-1.txt  bench.ei  build.rs  cbindgen.toml  code.ei  contributing.md  data.json  ei.dmp  ellie-lang-0.0.3.vsix  ellie.ei_parsed.json  ellie.ei_tokenized.json  httpr.txt  inner_code_compiler  package.json  purify.js  raw_ei.eiw  rebuildErrors.js  refactor.js  release.js  release.sh  (+9 more)
bytecode/: Cargo.toml  README.md  _build.rs  build.rs  bytecode.json  instruction_table.rs  instructions.csv  instructions.md
bytecode/src/: assembler.rs  instruction_table.rs  instructions.rs  lib.rs  test.rs  utils.rs
bytecode/src/transpiler/: class.rs  condition.rs  constructor.rs  for_loop.rs  function.rs  function_parameter.rs  getter_call.rs  loop_type.rs  mod.rs  native_function.rs  ret.rs  setter_call.rs  type_resolver.rs  variable.rs
bytecode/tests/transpilers/: type_transpiler.rs
capi/: Cargo.toml  build.rs  cbindgen.toml  ellie_c.h  main.cpp  output.h
capi/src/: com.rs  defs.rs  lib.rs
capi/src/definite/: definers.rs  mod.rs
capi/src/definite/items/: caller.rs  class.rs  condition.rs  constructor.rs  enum_type.rs  file_key.rs  for_loop.rs  function.rs  mod.rs  (+7 more)
capi/src/error/: mod.rs
capi/src/parser/: mod.rs
capi/src/syntax/: caller.rs  class.rs  condition.rs  definers.rs  function.rs  mod.rs  variable.rs
cli_utils/: Cargo.toml  README.md
cli_utils/src/: lib.rs  options.rs  outputs.rs  utils.rs
core/: Cargo.toml
core/src/: builded_libaries.rs  builded_libraries.rs  com.rs  defs.rs  information.rs  lib.rs  module_path.rs  native.rs  raw_type.rs
core/src/com/: mod.rs
core/src/definite/: definers.rs  mod.rs
core/src/error/: errorList.rs  error_list.rs  mod.rs
core/src/utils/: ellie_raw.txt  mod.rs  terminal_colors.rs
core/src/warning/: mod.rs  warning_list.rs
ellie_engine/: Cargo.toml  README.md  build.rs
ellie_engine/bytecode/: Cargo.toml  README.md  instructions.csv  instructions.md
ellie_engine/bytecode/src/: addressing_modes.rs  assembler.rs  instruction_table.rs  instructions.rs  lib.rs  macros.rs  types.rs  utils.rs
ellie_engine/bytecode/tests/: mod.rs
ellie_engine/core/: Cargo.toml
ellie_engine/core/src/: com.rs  defs.rs  information.rs  lib.rs  module_path.rs  native.rs  raw_type.rs
ellie_engine/fmt/: Cargo.toml  README.md
ellie_engine/fmt/src/: fmt.rs  lib.rs
ellie_engine/parser/: Cargo.toml  README.md
ellie_engine/parser/src/: deep_search_extensions.rs  lib.rs  parser.rs  utils.rs
ellie_engine/parser/standard_rules/: Cargo.toml
ellie_engine/renderer_utils/: Cargo.toml  README.md
ellie_engine/renderer_utils/src/: options.rs  outputs.rs  utils.rs
ellie_engine/src/: compiler.rs  engine_constants.rs  lib.rs  utils.rs  vm.rs
ellie_engine/tokenizer/: Cargo.toml
ellie_engine/tokenizer/src/: iterator.rs  lib.rs  macros.rs  tokenizer.rs
ellie_engine/tokenizer/tests/: mod.rs
ellie_engine/vm/: Cargo.toml
ellie_engine/vm/src/: channel.rs  config.rs  heap.rs  heap_memory.rs  instruction_utils.rs  lib.rs  program.rs  raw_type.rs  stack.rs  stack_memory.rs  thread.rs  utils.rs  vm.rs
elliec/: Cargo.toml  README.md
elliec/src/: compile_file.rs  main.rs  tokenize_file.rs  view_module.rs
ellieid/: Cargo.toml  README.md
ellieid/src/: command.rs  main.rs
ellievm/: Cargo.toml  README.md
ellievm/src/: commands.rs  debugger.rs  debugger_messages.rs  ida.rs  main.rs  run.rs  stream.rs  utils.rs  vm.rs
fmt/: Cargo.toml
fmt/src/: fmt.rs  lib.rs  options.rs  source_file.rs
fmt/src/renderer/: mod.rs
native/: Cargo.toml  build.rs  cbindgen.toml  my_header.h
native/src/: ellie_class.rs  ellie_function.rs  ellie_type_define.rs  ellie_types.rs  lib.rs
parser/: Cargo.toml
parser/src/: deep_search_extensions.rs  lib.rs  parser.rs
parser/src/parser/: README.md  iterator.rs  mod.rs  scope.rs
parser/src/processors/: brk.rs  caller_processor.rs  class.rs  class_processor.rs  condition.rs  condition_processor.rs  constructor.rs  constructor_processor.rs  definer_processor.rs  enum_processor.rs  enum_type.rs  file_key.rs  filekey_processor.rs  for_loop.rs  for_loop_processor.rs  forloop_processor.rs  function.rs  function_processor.rs  generic_item.rs  getter.rs  getter_call.rs  getter_processor.rs  go.rs  import.rs  import_processor.rs  loop_type.rs  mod.rs  ret.rs  ret_processor.rs  setter.rs  setter_call.rs  setter_processor.rs  type_check_processor.rs  type_processor.rs  value_processor.rs  variable.rs  variable_processor.rs
parser/src/syntax/: caller.rs  class.rs  condition.rs  constructor.rs  definers.rs  enum_type.rs  file_key.rs  for_loop.rs  forloop.rs  function.rs  getter.rs  import.rs  import_item.rs  mod.rs  native_function.rs  ret.rs  setter.rs  type.rs  typeDef.rs  variable.rs
parser/standard_rules/src/: rules.rs
parser/tests/: value_parsing_tests.rs
runtime/: Cargo.toml  README.md  old.txt
runtime/src/: heap.rs  lib.rs  runtime.rs  stack.rs  thread.rs
runtime/src/runtime/: mod.rs
tokenizer/: Cargo.toml  README.md  TODO.md  e  ellie.ei
tokenizer/src/: iterator.rs  lib.rs  tokenizer.rs
tokenizer/src/processors/: function_processor.rs  keyword_processor.rs  mod.rs
tokenizer/src/syntax/: mod.rs
tokenizer/src/tests/: definer_test.rs
tokenizer/tests/: char_test.rs  debug_test.rs  definer_test.rs  integer_test.rs  mod.rs  string_test.rs
tokenizer/tests/items/: definer_test.rs
tokenizer/tests/types/: array_test.rs  brace_reference_test.rs  char_test.rs  class_call_test.rs  cloak_test.rs  collective_type_test.rs  float_test.rs  function_call_test.rs  integer_test.rs  negative_test.rs  operator_test.rs  reference_test.rs  string_test.rs
tools/integration_test/: .(test.eic  Cargo.toml  test.eig
tools/integration_test/.cargo/: config.toml
tools/integration_test/src/: main.rs  utils.rs
(+810 files in other folders)
