[package]
name = "ellie_engine"
version_code = "BeautifulTropicalFish"
version = "0.7.1"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.net>", "Behemehal <info@behemehal.net>"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
path-absolutize = { version = "3.0.10", optional = true }
regex = { version = "1.1.7", optional = true }
bincode = { version = "1.0", optional = true }
ellie_core = { path = "core", version = "*" }
ellie_assist = { path = "EllieAssist", version = "*", optional = true }
ellie_tokenizer = { path = "tokenizer", version = "*", default-features = false, optional = true }
ellie_parser = { path = "parser", version = "*", default-features = false, optional = true }
ellie_bytecode = { path = "bytecode", version = "*", optional = true }
ellie_vm = { path = "vm", version = "*", optional = true }

ellie_cli_utils = { path = "cli_utils", version = "*", optional = true }

[features]
default = ["standard_rules", "build-cli", "vm", "compiler"]
compiler = ["ellie_tokenizer", "ellie_parser", "ellie_bytecode"]
vm = ["ellie_vm"]
build-cli = ["path-absolutize", "regex", "bincode", "ellie_cli_utils", "serde", "serde_json"]
ellie_assistant = ["ellie_assist"]
standard_rules =  ["ellie_parser/standard_rules"]


[[bin]]
name = "elliec"
test = false
bench = false
required-features = ["build-cli"]

[[bin]]
name = "ellievm"
test = false
bench = false
required-features = ["build-cli"]

[[bin]]
name = "elliefmt"
test = false
bench = false
required-features = ["build-cli"]

[build-dependencies]
path-absolutize = { version = "3.0.10" }
toml = "0.5.8"
regex = { version = "1.1.7" }


