[package]
name = "ellie_engine"
version_code = "BeautifulTropicalFish"
version = "0.9.0"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.net>", "Behemehal <info@behemehal.net>"]
edition = "2021"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
path-absolutize = { version = "3.0.10", optional = true }
ellie_core = { path = "core", version = "*" }
ellie_assist = { path = "EllieAssist", version = "*", optional = true }
ellie_tokenizer = { path = "tokenizer", version = "*", default-features = false, optional = true }
ellie_parser = { path = "parser", version = "*", default-features = false, optional = true }
ellie_bytecode = { path = "bytecode", version = "*", optional = true }
ellie_vm = { path = "vm", version = "*", optional = true }
ellie_fmt = { path = "fmt", version = "*", optional = true }
ellie_renderer_utils = { path = "renderer_utils", version = "*", optional = true,  default-features = false }

[features]
default = ["vm", "compiler", "fmt"]
compiler = ["ellie_tokenizer", "ellie_parser", "ellie_bytecode", "ellie_core/compiler_utils"]
std = []
vm = ["ellie_vm"]
renderer_utils = ["ellie_renderer_utils"]
fmt = ["ellie_fmt"]
ellie_assistant = ["ellie_assist"]
standard_rules =  ["ellie_parser/standard_rules"]
cli-utils = ["ellie_renderer_utils/cli-utils"]

[build-dependencies]
path-absolutize = { version = "3.0.10" }
toml = "0.5.8"
regex = { version = "1.1.7" }
chrono = "0.4.22"

[profile.release]
opt-level = "z"
