[package]
name = "ellie_capi"
version = "0.2.0"
authors = ["Ahmetcan Aksu <ahmetcanco@gmail.com>"]
edition = "2018"
license = "GPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ellie_core = {path = "../core", version = "1.0.0"}
ellie_parser = {path = "../parser", version = "1.7.3"}
libc = "0.2.14"

[build-dependencies]
cbindgen = "0.20.0"