[package]
name = "ellie_cli_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
clap = { version = "3.1.1" }
clap_complete = { version = "3.0.0" }
ellie_core = { path = "../core", version = "*" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
path-absolutize = { version = "3.0.10" }
