[package]
name = "elliec"
version = "0.3.1"
edition = "2021"
authors = [
    "Ahmetcan Aksu <ahmetcanaksu@behemehal.org>",
    "Behemehal <info@behemehal.org>",
]
license = "GPL-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
path-absolutize = { version = "3.0.10" }
ellie_engine = { path = "../ellie_engine", default-features = false, features = [
    "compiler",
    "cli-utils",
] }
bincode = { version = "1.3.3" }
