[package]
name = "ellievm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
path-absolutize = { version = "3.0.10" }
ellie_engine = { path = "../ellie_engine", features = [ "vm", "cli-utils", "std"] }
bincode = { version = "1.3.3" }
lazy_static = "1.4.0"