[package]
name = "ellie_native"
version = "0.1.0"
edition = "2018"

[dependencies]
ellie_core = {path = "../core", version = "1.0.0"}
ellie_parser = {path = "../parser", version = "1.1.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
enum-as-inner = "0.3.3"
libc = "0.2.14"

[lib]
name="ellie_ffi"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.19.0"

[features]
default = ["std"]
std = []