[package]
name = "ellie_parser"
description = "Parser for ellie language"
version = "1.6.0"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.net>"]
edition = "2018"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ellie_core = { path = "../core", version = "1.0.0" }
enum-as-inner = "0.3.3"
serde_yaml = "0.8"

[features]
default = ["std"]
std = []
integrity_com = []

[profile.release]
opt-level = 3