[package]
name = "ellie_parser"
description = "Parser for ellie language"
version = "0.5.0"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.net>"]
edition = "2021"
license = "GPL-2.0"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ellie_core = { path = "../core", version = "*" }
ellie_tokenizer = { path = "../tokenizer", version = "*", default-features = false }
enum-as-inner = "0.3.3"
ellie_standard_rules = { path = "./standard_rules", version = "0.1.0", optional = true }

[features]
default = ["std", "standard_rules"]
std = []
integrity_com = []
standard_rules = ["ellie_standard_rules"]

[profile.release]
opt-level = 3