[package]
name = "ellie_runtime"
version = "0.1.0"
authors = ["Ahmetcan Aksu <ahmetcanco@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ellie_core = { path = "../core", version = "1.0.0" }
ellie_parser = { path = "../parser", version = "1.6.0"}
enum-as-inner = "0.3.3"
rand = "0.8.4"

[features]
default = ["std"]
std = []

[[bin]]
name = "test"