[package]
name = "ellie_tokenizer"
description = "Tokenizer for ellie language"
version = "0.1.0"
edition = "2021"
default-run = "item_processor"

[dependencies]
ellie_core = { path = "../core", version = "1.0.0" }
enum-as-inner = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = []
integrity_com = []

[[bin]]
name = "item_processor"
test = false
bench = false

[[bin]]
name = "type_processor"
test = false
bench = false