[package]
name = "ellie_tokenizer"
description = "Tokenizer for ellie language"
version = "0.3.2"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.net>"]
edition = "2021"
license = "GPL-2.0"

[dependencies]
ellie_core = { path = "../core", version = "*" }
enum-as-inner = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = []