[package]
name = "ellie_bytecode"
description = "Bytecode assembler/encoder/decoder for ellie language"
version = "0.2.0"
edition = "2021"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.org>", "Behemehal <info@behemehal.org>"]
license = "GPL-2.0"

[dependencies]
ellie_core = { path = "../core", version = "*" }
ellie_parser = { path = "../parser", version = "*" }
enum-as-inner = "0.3.3"
lazy_static = "1.4.0"

[features]
default = ["std"]
std = []

[profile.release]
opt-level = 3