[package]
name = "ellie_bytecode"
description = "Bytecode assembler/encoder/decoder for ellie language"
version = "0.3.1"
edition = "2021"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.org>", "Behemehal <info@behemehal.org>"]
license = "GPL-2.0"
repository = "https://github.com/behemehal/Ellie-Language"
homepage = "https://www.ellie-lang.org"

[dependencies]
ellie_core = { path = "../core", version = "0.6.1" }
ellie_parser = { path = "../parser", version = "0.6.2" }
enum-as-inner = "0.6.0"
lazy_static = "1.4.0"

[features]
default = ["std"]
std = []