[package]
name = "ellie_fmt"
description = "Formatter for ellie"
version = "0.4.0"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.org>", "Behemehal <info@behemehal.org>"]
edition = "2021"
license = "GPL-2.0"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ellie_tokenizer = { path = "../tokenizer", version = "*" }
ellie_core = { path = "../core", version = "*" }

[features]
default = ["std"]
std = []