[package]
name = "ellie_parser"
description = "Parser for ellie language"
version = "0.6.2"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.org>", "Behemehal <info@behemehal.org>"]
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/behemehal/Ellie-Language"
homepage = "https://www.ellie-lang.org"

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
ellie_core = { path = "../core", version = "0.6.1" }
ellie_tokenizer = { path = "../tokenizer", version = "0.5.1", default-features = false }
enum-as-inner = "0.6.0"
ellie_standard_rules = { path = "./standard_rules", version = "0.1.0", optional = true }

[features]
default = ["std"]
std = []
integrity_com = []
standard_rules = ["ellie_standard_rules"]