[package]
name = "ellie_tokenizer"
description = "Tokenizer for ellie language"
version = "0.5.0"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.org>", "Behemehal <info@behemehal.org>"]
edition = "2021"
license = "GPL-2.0"

[dependencies]
ellie_core = { path = "../core", version = "*", features = ["compiler_utils"] }
enum-as-inner = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []
std = []