[package]
name = "ellie_tokenizer"
description = "Tokenizer for ellie language"
version = "0.6.2"
authors = ["Ahmetcan Aksu <ahmetcanaksu@behemehal.org>", "Behemehal <info@behemehal.org>"]
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/behemehal/Ellie-Language"
homepage = "https://www.ellie-lang.org"

[dependencies]
ellie_core = { path = "../core", version = "0.7.2", features = ["compiler_utils"] }
enum-as-inner = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]
default = []
std = []